templates/payments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o templates/
    kompose.image-pull-policy: Always
    kompose.service.type: LoadBalancer
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: payments
  name: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: payments
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o templates/
        kompose.image-pull-policy: Always
        kompose.service.type: LoadBalancer
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: payments
    spec:
      containers:
        - args:
            - sh
            - -c
            - sleep 5 && uvicorn payment_service.app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
          image: livsmichael/p2py:1.0.4
          imagePullPolicy: Always
          name: payments
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
