templates/producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o templates/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: producer
  name: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: producer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o templates/
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: producer
    spec:
      containers:
        - args:
            - sh
            - -c
            - sleep 5 && uvicorn producer_service.app.main:app --reload --workers 1 --host 0.0.0.0 --port 9000
          image: livsmichael/p2py:1.0.4
          name: producer
          ports:
            - containerPort: 9000
          resources: {}
      restartPolicy: Always
status: {}
