templates/risk-engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o templates/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: risk-engine
  name: risk-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: risk-engine
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o templates/
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: risk-engine
    spec:
      containers:
        - args:
            - sh
            - -c
            - sleep 5 && python risk_engine_service/main.py
          image: livsmichael/p2py:1.0.4
          name: risk-engine
          resources: {}
      restartPolicy: Always
status: {}
